# sancus-compiler

./: .gitignore  CMakeLists.txt  LICENSE.RUNTIME  README.md
.github/workflows/: compiler.yml
cmake/: AddObject.cmake  CMakeLists.txt  CompilerConfig.cmake  FindMSPGCC.cmake  LLVMConfig.cmake  PythonConfig.cmake  Sancus-CompilerConfig.cmake  Sancus-CompilerConfig.cmake.in  SancusCrypto.cmake  SpmCompilerConfig.cmake  UseMSPGCC.cmake  UseSancusCC.cmake
src/: CMakeLists.txt
src/crypto/: CMakeLists.txt  config.h.in  crypto.cpp  libsancuscrypt.py  spongent.cpp  spongent.h
src/drivers/: CMakeLists.txt  common.py  compiler.py  config.py.in  crypto.py  hmac.py  linker.py  memory.x  msp430.x  sancus-cc.in  sancus-crypto.in  sancus-ld.in  sancus.ld  sm-config-example.yaml  spm-compiler.in  spm-hmac.in  spm.ld
src/drivers/sancus/: crypto.py  paths.py  sancus_config.py
src/hmac-spongent/: hmac.cpp
src/hmac_spongent/: CMakeLists.txt  spongent.cpp  spongent.h
src/llvm/: AnnotationParser.cpp  AnnotationParser.h  CMakeLists.txt  Config.h.in  FunctionCcInfo.cpp  FunctionCcInfo.h  SancusModuleCreator.cpp  SancusModuleInfo.cpp  SancusModuleInfo.h  SpmCreator.cpp  SpmInfo.cpp  SpmInfo.h  SpmUtils.cpp  SpmUtils.h  entry.s  exit.s
src/sancus_support/: CMakeLists.txt  config.h.in  reactive.h  sm_support.c  sm_support.h  unprotected_entry.s
src/spm-support/: CMakeLists.txt  spm-support.c  spm-support.h  unprotected_entry.s
src/stubs/: CMakeLists.txt  entry.s  exit.s  reactive_stubs_support.h  sm_asm_entry.s  sm_asm_exit.s  sm_attest.c  sm_divhi3.s  sm_entry.s  sm_exit.s  sm_input.c  sm_isr.s  sm_isr_basic.s  sm_isr_dummy.s  sm_mmio_entry.s  sm_modhi3.s  sm_mulhi3.s  sm_ocall_spill.s  sm_output.c  sm_set_key.c  sm_udivhi3.s  sm_umodhi3.s  sm_verify.s  spm_entry.s  spm_verify.s  unprotected_entry.s
